<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.drms.ui.dashboard.DashboardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.drms.ui.warehouse.WarehouseFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_warehouse" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.drms.ui.storeroom.StoreroomFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_storeroom" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.drms.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.drms.ui.shelf.ShelfFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_shelf" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.drms.ui.pos.PosFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_pos" />
    <fragment
        android:id="@+id/ware_stock"
        android:name="com.example.drms.ware_stock"
        android:label="fragment_ware_stock"
        tools:layout="@layout/fragment_ware_stock" />
    <fragment
        android:id="@+id/ware_orders"
        android:name="com.example.drms.ware_orders"
        android:label="fragment_ware_orders"
        tools:layout="@layout/fragment_ware_orders" />
</navigation>